# CSE_Email_Processor

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  docker-compose.yml  pyproject.toml  pytest.ini
.claude/: settings.local.json
.github/workflows/: ci.yml  deploy.yml
data/checkpoints/: backlog_checkpoint.json  extraction_checkpoint.json
data/output/: 2024-04-19_stocks.json  2024-04-22_stocks.json  2024-04-24_stocks.json  2024-04-25_stocks.json  2024-04-26_stocks.json  2024-04-29_stocks.json  2024-04-30_stocks.json  2024-05-02_stocks.json  2024-05-03_stocks.json  2024-05-06_stocks.json  2024-05-14_stocks.json  2024-05-15_stocks.json  2024-05-16_stocks.json  2024-05-17_stocks.json  2024-05-20_stocks.json  2024-05-21_stocks.json  2024-05-22_stocks.json  2024-05-27_stocks.json  2024-05-28_stocks.json  2024-05-29_stocks.json  2024-05-30_stocks.json  2024-05-31_stocks.json  2024-06-03_stocks.json  2024-06-04_stocks.json  2024-06-05_stocks.json  2024-06-06_stocks.json  2024-06-07_stocks.json  2024-06-10_stocks.json  2024-06-11_stocks.json  2024-06-12_stocks.json  2024-06-13_stocks.json  2024-06-14_stocks.json  2024-06-18_stocks.json  2024-06-19_stocks.json  2024-06-20_stocks.json  2024-06-24_stocks.json  2024-06-25_stocks.json  2024-06-26_stocks.json  2024-06-27_stocks.json  2024-06-28_stocks.json  (+364 more)
prompts/: extraction_prompt.txt
scripts/: batch_extract.py  redownload_dates.py  test_extraction.py
src/: __init__.py  backlog_processor.py  browser_downloader.py  config.py  data_store.py  data_validator.py  email_scanner.py  microsoft_auth.py  models.py  pdf_downloader.py  pdf_extractor.py  pipeline.py
src/api/: __init__.py  main.py
tests/: __init__.py  conftest.py
tests/integration/: __init__.py  test_gmail_auth.py
tests/unit/: __init__.py  test_backlog_processor.py  test_data_validator.py  test_email_scanner.py  test_pdf_downloader.py  test_pdf_extractor.py
